--- a/static/index.html
+++ b/static/index.html
@@ -11,7 +11,11 @@
   <video id="remote" autoplay playsinline></video>
 
   <script>
-    const pc = new RTCPeerConnection();
+    const pc = new RTCPeerConnection({
+      iceServers: [
+        {urls: "stun:stun.l.google.com:19302"}  // STUN público do Google
+      ]
+    });
     const ws = new WebSocket(`ws://${location.host}/ws`);
     const localVideo = document.getElementById('local');
     const remoteVideo = document.getElementById('remote');
